--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@rails/webpacker": "3.4",
     "core-js": "^2.5.5",
+    "html-loader": "^0.5.5",
     "rxjs": "^5.5.10",
     "ts-loader": "3.5.0",
     "typescript": "^2.8.3",
+    "webpack-merge": "^4.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "css-loader": "^0.28.11",
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^7.0.1",
+    "to-string-loader": "^1.1.5",
     "webpack-dev-server": "2.11.2"
   }
 }
